<resources>
    <string name="app_name">Freedomotic Control</string>
    <string name="largeButtondesc">Press this</string>
    <string name="infoText">Press microphone for command</string>
    <string name="ipInfo">Ip Address</string>
    <string name="portInfo">Port Num</string>
    <string name="userInfo">Username</string>
    <string name="passInfo">Password</string>
    <string name="title_activity_maps">Map</string>
    <string name="admin">admin</string>
</resources>
