<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidDomInspection -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tk.pseudonymous.myvahome.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iconView"
        android:layout_above="@+id/results"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:id="@+id/talk"
        android:onClick="buttonGet"
        android:background="@drawable/microphone"
        android:contentDescription="@string/largeButtondesc"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/infoText"
        android:id="@+id/infoText"
        android:layout_below="@+id/talk"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/results"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ipText"
        android:layout_below="@+id/infoText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:layout_toStartOf="@+id/space"
        android:hint="@string/ipInfo" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/portText"
        android:layout_alignTop="@+id/ipText"
        android:hint="@string/portInfo"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/space" />

    <Space
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/space" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/UserText"
        android:text="@string/admin"
        android:hint="@string/userInfo"
        android:layout_below="@+id/ipText"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/ipText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/PassText"
        android:text="@string/admin"
        android:hint="@string/passInfo"
        android:inputType="textPassword"
        android:layout_below="@+id/portText"
        android:layout_alignEnd="@+id/portText"
        android:layout_toEndOf="@+id/iconView" />

</RelativeLayout>
